<resources>
    <string name="app_name">WeatherApp</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_home">HomeActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="user_name">username</string>
    <string name="loading">loading...</string>
    <string name="android_studio">Android Studio</string>
    <string name="broadcast_url">https://api.forecast.io</string>
    <string name="img">img</string>


    <string name="title_weatherinfo_list">WeatherInfoList</string>
    <string name="title_weatherinfo_detail">WeatherInfo Detail</string>
    <string name="title_activity_weather_home">WeatherHomeActivity</string>
    <string name="section_format">Hello World from section: %1$d</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="current_temp_text">50\u00B0</string>


    <string name="apparent_temperature">Temperature</string>
    <string name="humidity">Humidity</string>
    <string name="dew_point">Dew Point</string>
    <string name="wind_speed">Wind speed</string>
    <string name="pressure">Pressure</string>
    <string name="visibility">Visibility</string>
    <string name="ozone">Ozone</string>
    <string name="precipitation_intensity">Precipitation Intensity :</string>
    <string name="precipitation_probability">Precipitation Probability :</string>
    <string name="relative_humidity">Relative Humidity :</string>
    <string name="wind_bearing">Wind Bearing :</string>
    <string name="Current_time">Weather Update Time :</string>
    <string name="sunset_time">Sunset Time :</string>
    <string name="moon_phase">Moon Phase :</string>
    <string name="precipitation_intensity_max">Precipitation Intensity Max :</string>
    <string name="minimum_temperature">Min Temperature :</string>
    <string name="minimum_temprature_time">Min Temperature Time :</string>
    <string name="maximum_temprature">Max Temperature :</string>
    <string name="maximum_temprature_time">Max Temperature Time :</string>
    <string name="cloud_cover">Cloud cover :</string>


</resources>
